updated most of html, the main button trees are working perfectly

--- a/index.html
+++ b/index.html
@@ -144,17 +144,17 @@
 
                 <input type="checkbox" data-checked="false" data-desc="2.0" data-target="FormGroup8" id="Group7_0" name="CheckboxGroup7"/>
                 <label for="Group7_0">
-                    <div class="CheckboxDiv" onclick="InputLogic(7, 0, 'FormGroup8')">Ar apkakli</div>
+                    <div class="CheckboxDiv" onclick="InputLogic($(this))">Ar apkakli</div>
                 </label>
 
                 <input type="checkbox" data-checked="false" data-desc="2.1" data-target="FormGroup9" id="Group7_1" name="CheckboxGroup7"/>
                 <label for="Group7_1">
-                    <div class="CheckboxDiv" onclick="InputLogic(7, 1, 'FormGroup9')">Bez apkakles</div>
+                    <div class="CheckboxDiv" onclick="InputLogic($(this))">Bez apkakles</div>
                 </label>
 
                 <input type="checkbox" data-checked="false" data-desc="2.2" data-target="FormGroup10" id="Group7_2" name="CheckboxGroup7"/>
                 <label for="Group7_2">
-                    <div class="CheckboxDiv" onclick="InputLogic(7, 2, 'FormGroup10')">Ar izgriezumu</div>
+                    <div class="CheckboxDiv" onclick="InputLogic($(this))">Ar izgriezumu</div>
                 </label>
             </div>
 
@@ -164,12 +164,12 @@
 
                 <input type="checkbox" data-checked="false" data-desc="2.0.0" data-target="FormGroup11" id="Group8_0" name="CheckboxGroup8"/>
                 <label for="Group8_0">
-                    <div class="CheckboxDiv" onclick="InputLogic(8, 0, 'FormGroup11')">Stāvkrādziņa</div>
+                    <div class="CheckboxDiv" onclick="InputLogic($(this))">Stāvkrādziņa</div>
                 </label>
 
                 <input type="checkbox" data-checked="false" data-desc="2.0.1" data-target="FormGroup12" id="Group8_1" name="CheckboxGroup8"/>
                 <label for="Group8_1">
-                    <div class="CheckboxDiv" onclick="InputLogic(8, 1, 'FormGroup12')">Klasiskā apkakle</div>
+                    <div class="CheckboxDiv" onclick="InputLogic($(this))">Klasiskā apkakle</div>
                 </label>
             </div>
 
@@ -179,12 +179,12 @@
 
                 <input type="checkbox" data-checked="false" data-desc="2.1.0" id="Group9_0" name="CheckboxGroup9"/>
                 <label for="Group9_0">
-                    <div class="CheckboxDiv" onclick="InputLogic(9, 0)">Priekšpusē vīle pa centru un poga augšpusē</div>
+                    <div class="CheckboxDiv" onclick="InputLogic($(this))">Priekšpusē vīle pa centru un poga augšpusē</div>
                 </label>
 
                 <input type="checkbox" data-checked="false" data-desc="2.1.1" id="Group9_1" name="CheckboxGroup9"/>
                 <label for="Group9_1">
-                    <div class="CheckboxDiv" onclick="InputLogic(9, 1)">Mugurpusē vīle pa centru un poga augšpusē</div>
+                    <div class="CheckboxDiv" onclick="InputLogic($(this))">Mugurpusē vīle pa centru un poga augšpusē</div>
                 </label>
             </div>
 
@@ -194,7 +194,7 @@
 
                 <input type="checkbox" data-checked="false" data-desc="2.2.0" id="Group10_0" name="CheckboxGroup10"/>
                 <label for="Group10_0">
-                    <div class="CheckboxDiv" onclick="InputLogic(10, 0)">Stāvkrādziņa</div>
+                    <div class="CheckboxDiv" onclick="InputLogic($(this))">Stāvkrādziņa</div>
                 </label>
             </div>
 
@@ -204,12 +204,12 @@
 
                 <input type="checkbox" data-checked="false" data-desc="2.0.0.0" id="Group11_0" name="CheckboxGroup11"/>
                 <label for="Group11_0">
-                    <div class="CheckboxDiv" onclick="InputLogic(11, 0)">Pogājums līdz krūšu daļai</div>
+                    <div class="CheckboxDiv" onclick="InputLogic($(this))">Pogājums līdz krūšu daļai</div>
                 </label>
 
                 <input type="checkbox" data-checked="false" data-desc="2.0.0.1" id="Group11_1" name="CheckboxGroup11"/>
                 <label for="Group11_1">
-                    <div class="CheckboxDiv" onclick="InputLogic(11, 1)">Pogājums līdz apakšai</div>
+                    <div class="CheckboxDiv" onclick="InputLogic($(this))">Pogājums līdz apakšai</div>
                 </label>
             </div>
 
@@ -219,12 +219,12 @@
 
                 <input type="checkbox" data-checked="false" data-desc="2.0.1.0" id="Group12_0" name="CheckboxGroup12"/>
                 <label for="Group12_0">
-                    <div class="CheckboxDiv" onclick="InputLogic(12, 0)">Pogājums līdz krūšu daļai</div>
+                    <div class="CheckboxDiv" onclick="InputLogic($(this))">Pogājums līdz krūšu daļai</div>
                 </label>
 
                 <input type="checkbox" data-checked="false" data-desc="2.0.1.1" id="Group12_1" name="CheckboxGroup12"/>
                 <label for="Group12_1">
-                    <div class="CheckboxDiv" onclick="InputLogic(12, 1)">Pogājums līdz apakšai</div>
+                    <div class="CheckboxDiv" onclick="InputLogic($(this))">Pogājums līdz apakšai</div>
                 </label>
             </div>
 
@@ -236,12 +236,12 @@
 
                 <input type="checkbox" data-checked="false" data-desc="3.0" id="Group13_0" name="CheckboxGroup13"/>
                 <label for="Group13_0">
-                    <div class="CheckboxDiv" onclick="InputLogic(13, 0)">Taisna</div>
+                    <div class="CheckboxDiv" onclick="InputLogic($(this))">Taisna</div>
                 </label>
 
                 <input type="checkbox" data-checked="false" data-desc="3.1" id="Group13_1" name="CheckboxGroup13"/>
                 <label for="Group13_1">
-                    <div class="CheckboxDiv" onclick="InputLogic(13, 1)">Izliekta</div>
+                    <div class="CheckboxDiv" onclick="InputLogic($(this))">Izliekta</div>
                 </label>
             </div>
 
@@ -253,12 +253,12 @@
 
                 <input type="checkbox" data-checked="false" data-desc="4.0" data-target="FormGroup15" id="Group14_0" name="CheckboxGroup14"/>
                 <label for="Group14_0">
-                    <div class="CheckboxDiv" onclick="InputLogic(14, 0, 'FormGroup15')">Bez kabatām</div>
+                    <div class="CheckboxDiv" onclick="InputLogic($(this))">Bez kabatām</div>
                 </label>
 
                 <input type="checkbox" data-checked="false" data-desc="4.1" data-target="FormGroup16" id="Group14_1" name="CheckboxGroup14"/>
                 <label for="Group14_1">
-                    <div class="CheckboxDiv" onclick="InputLogic(14, 1, 'FormGroup16')">Ar kabatām</div>
+                    <div class="CheckboxDiv" onclick="InputLogic($(this))">Ar kabatām</div>
                 </label>
             </div>
 
@@ -268,12 +268,12 @@
 
                 <input type="checkbox" data-checked="false" data-desc="4.0.0" id="Group15_0" name="CheckboxGroup15"/>
                 <label for="Group15_0">
-                    <div class="CheckboxDiv" onclick="InputLogic(15, 0)">Ar vienu klapi</div>
+                    <div class="CheckboxDiv" onclick="InputLogic($(this))">Ar vienu klapi</div>
                 </label>
 
                 <input type="checkbox" data-checked="false" data-desc="4.0.1" id="Group15_1" name="CheckboxGroup15"/>
                 <label for="Group15_1">
-                    <div class="CheckboxDiv" onclick="InputLogic(15, 1)">Ar divām klapēm</div>
+                    <div class="CheckboxDiv" onclick="InputLogic($(this))">Ar divām klapēm</div>
                 </label>
             </div>
 
@@ -283,12 +283,12 @@
 
                 <input type="checkbox" data-checked="false" data-desc="4.1.0" data-target="FormGroup17" id="Group16_0" name="CheckboxGroup16"/>
                 <label for="Group16_0">
-                    <div class="CheckboxDiv" onclick="InputLogic(16, 0, 'FormGroup17')">Ar vienu kabatu</div>
+                    <div class="CheckboxDiv" onclick="InputLogic($(this))">Ar vienu kabatu</div>
                 </label>
 
                 <input type="checkbox" data-checked="false" data-desc="4.1.1" data-target="FormGroup18" id="Group16_1" name="CheckboxGroup16"/>
                 <label for="Group16_1">
-                    <div class="CheckboxDiv" onclick="InputLogic(16, 1, 'FormGroup18')">Ar divām kabatām</div>
+                    <div class="CheckboxDiv" onclick="InputLogic($(this))">Ar divām kabatām</div>
                 </label>
             </div>
 
@@ -298,12 +298,12 @@
 
                 <input type="checkbox" data-checked="false" data-desc="4.1.0.0" id="Group17_0" name="CheckboxGroup17"/>
                 <label for="Group17_0">
-                    <div class="CheckboxDiv" onclick="InputLogic(17, 0)">Bez klapes</div>
+                    <div class="CheckboxDiv" onclick="InputLogic($(this))">Bez klapes</div>
                 </label>
 
                 <input type="checkbox" data-checked="false" data-desc="4.1.0.1" id="Group17_1" name="CheckboxGroup17"/>
                 <label for="Group17_1">
-                    <div class="CheckboxDiv" onclick="InputLogic(17, 1)">Ar klapi</div>
+                    <div class="CheckboxDiv" onclick="InputLogic($(this))">Ar klapi</div>
                 </label>
             </div>
 
@@ -313,12 +313,12 @@
 
                 <input type="checkbox" data-checked="false" data-desc="4.1.1.0" id="Group18_0" name="CheckboxGroup18"/>
                 <label for="Group18_0">
-                    <div class="CheckboxDiv" onclick="InputLogic(18, 0)">Bez klapēm</div>
+                    <div class="CheckboxDiv" onclick="InputLogic($(this))">Bez klapēm</div>
                 </label>
 
                 <input type="checkbox" data-checked="false" data-desc="4.1.1.1" id="Group18_1" name="CheckboxGroup18"/>
                 <label for="Group18_1">
-                    <div class="CheckboxDiv" onclick="InputLogic(18, 1)">Ar klapēm</div>
+                    <div class="CheckboxDiv" onclick="InputLogic($(this))">Ar klapēm</div>
                 </label>
             </div>
 
@@ -330,12 +330,12 @@
 
                 <input type="checkbox" data-checked="false" data-desc="5.0" data-target="FormGroup20" id="Group19_0" name="CheckboxGroup19"/>
                 <label for="Group19_0">
-                    <div class="CheckboxDiv" onclick="InputLogic(19, 0, 'FormGroup20')">Standarta izmērs</div>
+                    <div class="CheckboxDiv" onclick="InputLogic($(this))">Standarta izmērs</div>
                 </label>
 
                 <input type="checkbox" data-checked="false" data-desc="5.1" data-target="FormGroup21" id="Group19_1" name="CheckboxGroup19"/>
                 <label for="Group19_1">
-                    <div class="CheckboxDiv" onclick="InputLogic(19, 1, 'FormGroup21')">Individuāls izmērs</div>
+                    <div class="CheckboxDiv" onclick="InputLogic($(this))">Individuāls izmērs</div>
                 </label>
             </div>
 
@@ -345,57 +345,57 @@
 
                 <input type="checkbox" data-checked="false" data-desc="5.0.0" id="Group20_0" name="CheckboxGroup20"/>
                 <label for="Group20_0">
-                    <div class="CheckboxDiv" onclick="InputLogic(20, 0)">Xs</div>
+                    <div class="CheckboxDiv" onclick="InputLogic($(this))">Xs</div>
                 </label>
 
                 <input type="checkbox" data-checked="false" data-desc="5.0.1" id="Group20_1" name="CheckboxGroup20"/>
                 <label for="Group20_1">
-                    <div class="CheckboxDiv" onclick="InputLogic(20, 1)">S</div>
+                    <div class="CheckboxDiv" onclick="InputLogic($(this))">S</div>
                 </label>
 
                 <input type="checkbox" data-checked="false" data-desc="5.0.2" id="Group20_2" name="CheckboxGroup20"/>
                 <label for="Group20_2">
-                    <div class="CheckboxDiv" onclick="InputLogic(20, 2)">M</div>
+                    <div class="CheckboxDiv" onclick="InputLogic($(this))">M</div>
                 </label>
 
                 <input type="checkbox" data-checked="false" data-desc="5.0.3" id="Group20_3" name="CheckboxGroup20"/>
                 <label for="Group20_3">
-                    <div class="CheckboxDiv" onclick="InputLogic(20, 3)">L</div>
+                    <div class="CheckboxDiv" onclick="InputLogic($(this))">L</div>
                 </label>
 
                 <input type="checkbox" data-checked="false" data-desc="5.0.4" id="Group20_4" name="CheckboxGroup20"/>
                 <label for="Group20_4">
-                    <div class="CheckboxDiv" onclick="InputLogic(20, 4)">XL</div>
+                    <div class="CheckboxDiv" onclick="InputLogic($(this))">XL</div>
                 </label>
 
                 <input type="checkbox" data-checked="false" data-desc="5.0.5" id="Group20_5" name="CheckboxGroup20"/>
                 <label for="Group20_5">
-                    <div class="CheckboxDiv" onclick="InputLogic(20, 5)">2XL</div>
+                    <div class="CheckboxDiv" onclick="InputLogic($(this))">2XL</div>
                 </label>
 
                 <input type="checkbox" data-checked="false" data-desc="5.0.6" id="Group20_6" name="CheckboxGroup20"/>
                 <label for="Group20_6">
-                    <div class="CheckboxDiv" onclick="InputLogic(20, 6)">3XL</div>
+                    <div class="CheckboxDiv" onclick="InputLogic($(this))">3XL</div>
                 </label>
 
                 <input type="checkbox" data-checked="false" data-desc="5.0.7" id="Group20_7" name="CheckboxGroup20"/>
                 <label for="Group20_7">
-                    <div class="CheckboxDiv" onclick="InputLogic(20, 7)">4XL</div>
+                    <div class="CheckboxDiv" onclick="InputLogic($(this))">4XL</div>
                 </label>
 
                 <input type="checkbox" data-checked="false" data-desc="5.0.8" id="Group20_8" name="CheckboxGroup20"/>
                 <label for="Group20_8">
-                    <div class="CheckboxDiv" onclick="InputLogic(20, 8)">5XL</div>
+                    <div class="CheckboxDiv" onclick="InputLogic($(this))">5XL</div>
                 </label>
 
                 <input type="checkbox" data-checked="false" data-desc="5.0.9" id="Group20_9" name="CheckboxGroup20"/>
                 <label for="Group20_9">
-                    <div class="CheckboxDiv" onclick="InputLogic(20, 9)">6XL</div>
+                    <div class="CheckboxDiv" onclick="InputLogic($(this))">6XL</div>
                 </label>
 
                 <input type="checkbox" data-checked="false" data-desc="5.0.10" id="Group20_10" name="CheckboxGroup20"/>
                 <label for="Group20_10">
-                    <div class="CheckboxDiv" onclick="InputLogic(20, 10)">7XL</div>
+                    <div class="CheckboxDiv" onclick="InputLogic($(this))">7XL</div>
                 </label>
             </div>
 
@@ -405,17 +405,17 @@
 
                 <input type="checkbox" data-checked="false" data-desc="5.1.0" id="Group21_0" name="CheckboxGroup21"/>
                 <label for="Group21_0">
-                    <div class="CheckboxDiv" onclick="InputLogic(21, 0)">Krūšu apkārtmērs</div>
+                    <div class="CheckboxDiv" onclick="InputLogic($(this))">Krūšu apkārtmērs</div>
                 </label>
 
                 <input type="checkbox" data-checked="false" data-desc="5.1.1" id="Group21_1" name="CheckboxGroup21"/>
                 <label for="Group21_1">
-                    <div class="CheckboxDiv" onclick="InputLogic(21, 1)">Auguma garums</div>
+                    <div class="CheckboxDiv" onclick="InputLogic($(this))">Auguma garums</div>
                 </label>
 
                 <input type="checkbox" data-checked="false" data-desc="5.1.2" id="Group21_2" name="CheckboxGroup21"/>
                 <label for="Group21_2">
-                    <div class="CheckboxDiv" onclick="InputLogic(21, 2)">Kakla apkārtmērs</div>
+                    <div class="CheckboxDiv" onclick="InputLogic($(this))">Kakla apkārtmērs</div>
                 </label>
             </div>
 
@@ -427,32 +427,32 @@
 
                 <input type="checkbox" data-checked="false" data-desc="6.0" id="Group22_0" name="CheckboxGroup22"/>
                 <label for="Group22_0">
-                    <div class="CheckboxDiv" onclick="InputLogic(22, 0)">Esmu standarts</div>
+                    <div class="CheckboxDiv" onclick="InputLogic($(this))">Esmu standarts</div>
                 </label>
 
                 <input type="checkbox" data-checked="false" data-desc="6.1" id="Group22_1" name="CheckboxGroup22"/>
                 <label for="Group22_1">
-                    <div class="CheckboxDiv" onclick="InputLogic(22, 1)">Muskuļota miesasbūve</div>
+                    <div class="CheckboxDiv" onclick="InputLogic($(this))">Muskuļota miesasbūve</div>
                 </label>
 
                 <input type="checkbox" data-checked="false" data-desc="6.2" id="Group22_2" name="CheckboxGroup22"/>
                 <label for="Group22_2">
-                    <div class="CheckboxDiv" onclick="InputLogic(22, 2)">"Alus vēderiņš"</div>
+                    <div class="CheckboxDiv" onclick="InputLogic($(this))">"Alus vēderiņš"</div>
                 </label>
 
                 <input type="checkbox" data-checked="false" data-desc="6.3" id="Group22_3" name="CheckboxGroup22"/>
                 <label for="Group22_3">
-                    <div class="CheckboxDiv" onclick="InputLogic(22, 3)">Sakumpusi stāja</div>
+                    <div class="CheckboxDiv" onclick="InputLogic($(this))">Sakumpusi stāja</div>
                 </label>
 
                 <input type="checkbox" data-checked="false" data-desc="6.4" id="Group22_4" name="CheckboxGroup22"/>
                 <label for="Group22_4">
-                    <div class="CheckboxDiv" onclick="InputLogic(22, 4)">Izliekta stāja</div>
+                    <div class="CheckboxDiv" onclick="InputLogic($(this))">Izliekta stāja</div>
                 </label>
 
                 <input type="checkbox" data-checked="false" data-desc="6.5" data-target="FormGroup23" id="Group22_5" name="CheckboxGroup22"/>
                 <label for="Group22_5">
-                    <div class="CheckboxDiv" onclick="InputLogic(22, 5, 'FormGroup23')">Cits variants</div>
+                    <div class="CheckboxDiv" onclick="InputLogic($(this))">Cits variants</div>
                 </label>
             </div>
 
@@ -462,7 +462,7 @@
 
                 <input type="checkbox" data-checked="false" data-desc="6.5.0" id="Group23_0" name="CheckboxGroup23"/>
                 <label for="Group23_0">
-                    <div class="CheckboxDiv" onclick="InputLogic(23, 0)">[ Šeit varēs rakstīt ]</div>
+                    <div class="CheckboxDiv" onclick="InputLogic($(this))">[ Šeit varēs rakstīt ]</div>
                 </label>
             </div>
 
