starting work on other buttons

--- a/index.html
+++ b/index.html
@@ -497,22 +497,23 @@
                 </label>
             </div>
 
-            <div class="FormSection px-4 py-3">
-                <p><b>Aizpildiet laukus</b></p>
+            <!--MAIN section 25-->
+            <div class="FormSection FormGroup1 px-4 py-3">
+                <p>Aizpildiet laukus</p>
 
-                <input type="checkbox" id="24" name="group8[]"/>
-                <label for="24">
-                <div class="CheckboxDiv">Vārds</div>
+                <input type="checkbox" data-checked="false" id="Group25_0" name="CheckboxGroup25"/>
+                <label for="Group25_0">
+                    <div class="CheckboxDiv" onclick="">Vārds</div>
                 </label>
 
-                <input type="checkbox" id="25" name="group8[]"/>
-                <label for="25">
-                <div class="CheckboxDiv">"Telefona numurs"</div>
+                <input type="checkbox" data-checked="false" id="Group25_1" name="CheckboxGroup25"/>
+                <label for="Group25_1">
+                    <div class="CheckboxDiv" onclick="">Telefona numurs</div>
                 </label>
 
-                <input type="checkbox" id="26" name="group8[]"/>
-                <label for="26">
-                <div class="CheckboxDiv">E-pasts</div>
+                <input type="checkbox" data-checked="false" id="Group25_2" name="CheckboxGroup25"/>
+                <label for="Group25_2">
+                    <div class="CheckboxDiv" onclick="">E-pasts</div>
                 </label>
             </div>
 
