some partially working version of js

--- a/index.html
+++ b/index.html
@@ -529,17 +529,16 @@
             <div class="ImageContainer w-100 d-flex">
                 <div class="ImageBoxFront w-50">
                     <img class="OverlayImage BaseImage" src="" alt="">
-                    <img class="OverlayImage 14_H_FR" src="/images/14_H_FR.png" alt="">
-                    <img class="OverlayImage 14_H_FL" src="/images/14_H_FL.png" alt="">
-                    <img class="OverlayImage 14_I_FR" src="/images/14_I_FR.png" alt="">
-                    <img class="OverlayImage 14_I_FL" src="/images/14_I_FL.png" alt="">
-                    
+                    <img class="OverlayImage 14_H_FR" src="images/14_H_FR.png" alt="">
+                    <img class="OverlayImage 14_H_FL" src="images/14_H_FL.png" alt="">
+                    <img class="OverlayImage 14_I_FR" src="images/14_I_FR.png" alt="">
+                    <img class="OverlayImage 14_I_FL" src="images/14_I_FL.png" alt="">
                 </div>
                 <div class="ImageBoxBack w-50">
-                    <img class="OverlayImage 14_H_BR" src="/images/14_H_BR.png" alt="">
-                    <img class="OverlayImage 14_H_BL" src="/images/14_H_BL.png" alt="">
-                    <img class="OverlayImage 14_I_BR" src="/images/14_I_BR.png" alt="">
-                    <img class="OverlayImage 14_I_BL" src="/images/14_I_BL.png" alt="">
+                    <img class="OverlayImage 14_H_BR" src="images/14_H_BR.png" alt="">
+                    <img class="OverlayImage 14_H_BL" src="images/14_H_BL.png" alt="">
+                    <img class="OverlayImage 14_I_BR" src="images/14_I_BR.png" alt="">
+                    <img class="OverlayImage 14_I_BL" src="images/14_I_BL.png" alt="">
                 </div>
             </div>
         </div>
